--- a/scope/pom.xml
+++ b/scope/pom.xml
@@ -12,5 +12,13 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-    
+
+    <dependencies>
+        <dependency>
+            <groupId>net.lvsq</groupId>
+            <artifactId>jgossip</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
